added the devise auths

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,28 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  username: postgres
+  password: password
+
+development:
+  <<: *default
+  database: PocketPal_development
+  username: postgres
+  password: password
+
+test:
+  <<: *default
+  database: PocketPal_test
+  username: postgres
+  password: password
+
+production:
+  <<: *default
+  database: PocketPal_production
+  username: postgres
+  password: password
